test/invalid/idl/duplicate.webidl
typedef int Test;

[Exposed=Window]
interface Test {
  undefined foo();
};
